--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.1.0",
     "@react-navigation/stack": "^6.1.1",
-    "expo": "~42.0.1",
+    "expo": "^44.0.6",
+    "expo-cli": "^5.2.0",
+    "expo-image-picker": "~12.0.1",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
     "react": "16.13.1",
